# sandbloodwater

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: CODEOWNERS
assets/: game.excalidraw  index.html  land_layer.csv  map.tsv  solid_layer.csv  water_layer.csv
old_ref/camera/: entity.rs  mod.rs  plugin.rs  system.rs
old_ref/common/: mod.rs
old_ref/item/: entity.rs  system.rs
old_ref/network/client/: plugin.rs
old_ref/network/server/: resource.rs
old_ref/player/: mod.rs  plugin.rs
old_ref/player/system/: drop.rs  drop_processor.rs  init.rs  mod.rs  sync_processor.rs
old_ref/world/: mod.rs  resource.rs  system.rs
src/: client.rs  entity_response.rs  entity_run.rs  event_processing.rs  events.rs  lib.rs  main.rs  player_run.rs  remote_client.rs  remote_server.rs  render.rs  server.rs  standalone.rs  state_update.rs  state_update_events.rs  world_response.rs  world_run.rs
src/camera/: entity.rs  mod.rs  plugin.rs  system.rs
src/common/: mod.rs
src/game/: plugin.rs
src/item/: component.rs  entity.rs  mod.rs  plugin.rs  system.rs
src/network/: client.rs  mod.rs  plugin.rs  resource.rs  server.rs
src/network/client/: mod.rs  plugin.rs  resource.rs  system.rs
src/network/server/: mod.rs  plugin.rs  resource.rs  (+1 more)
src/network_client/: client.rs  mod.rs  plugin.rs  system.rs
src/network_server/: mod.rs  plugin.rs  resource.rs  server.rs  system.rs
src/player/: component.rs  entity.rs  mod.rs  plugin.rs  resource.rs  system.rs
src/world/: component.rs  entity.rs  mod.rs  plugin.rs  resource.rs  system.rs  system_processor.rs  utils.rs
(+24 files in other folders)
