[package]
name = "sandbloodwater"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_embedded_assets = "0.10.0"
lazy_static = "1.4.0"
local-ip-address = "0.6.1"
serde = "1.0.196"
serde_json = "1.0.112"
tsv = "0.1.1"
wasm-bindgen-cli = "0.2.89"

[features]
client = []
server = []
